created default page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz Application</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div id="home" class="flex-center flex-column">
+    <h1>Quiz App</h1>
+            <a href="/game.html" class="btn">Play</a>
+            <a href="/highscore.html" class="btn">Highscore</a>
+        </div>
+    </div>
 </body>
 </html>
